--- a/webrecorder/webrecorder/templates/recorder.html
+++ b/webrecorder/webrecorder/templates/recorder.html
@@ -1,97 +1,93 @@
 {% from '/utils.html' import sharing_widget %}
 
 {% if curr_mode and curr_mode != 'live' %}
-<div class="col-md-10 col-sm-10">
-    <form class="{{ 'content-form' if curr_mode != 'new' else 'start-recording' }} form-group-recorder-url">
-        <div class="banner-status">
-            {% if curr_mode != "new" %}
-            <div class="pull-right">
-                <a href="#" data-toggle="modal" style="margin-right: 25px" data-target="#report-modal" class="left-buffer doesnt-look-right">Doesn't look right?</a>
+
+    {% if can_admin() %}
+        <div class="mode-selector col-md-2 col-sm-2">
+            {% include '/mode_dropdown.html' %}
+
+            {% if curr_mode == 'record' or curr_mode == 'patch' %}
+                <span class="size-counter size-counter-active">
+                    <span class="left-buffer-md badge current-size" data-size="{{ info.size }}"></span>
+                </span>
+            {% endif %}
+        </div>
+    {% endif %}
+
+    <div class="col-md-8 col-sm-8 {% if not can_admin() %}col-sm-offset-2{% endif %}">
+        <form class="{{ 'content-form' if curr_mode != 'new' else 'start-recording' }} form-group-recorder-url">
+            <div class="input-group containerized">
+                <div class='input-group-btn'>
+                    {% if curr_mode == 'replay' or curr_mode == 'replay-coll' %}
+                        <button type="button" class="btn btn-default btn-prev"><span class='glyphicon glyphicon-chevron-left'></span></button>
+                        <input type="text" id='page-display' class='form-control hidden-sm' value="-" />
+                    {% endif %}
+
+                    {% if can_admin() %}
+                        {% include '/containerized_browser_select.html' %}
+                    {% endif %}
+                </div>
+
+                {# wr url bar #}
+                {% if curr_mode == 'replay' or curr_mode == 'replay-coll' %}
+                    <div class='linklist'>
+                        <input type='text' class="form-control dropdown-toggle" name="url" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-value-encoded="{{ url }}" data-target-decoded="value" value="" readonly/>
+                        <ul class="dropdown-menu">
+                            {% for rec in get_recs_for_coll() %}
+                                <li>
+                                    <div class='url' href='/{{ user }}/{{ coll }}/{{ rec.ts }}{% if browser %}$br:{{ browser }}{% endif %}/{{ rec.url }}'>{{ rec.url|trunc_url }}</div><span class='replay-date' data-date='{{ rec.ts }}'/>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <span class='replay-date hidden-xs main-replay-date'></span>
+                    </div>
+                {% else %}
+                    <input type="text" class="url-input-recorder form-control" name="url" data-value-encoded="{{ url }}" data-target-decoded="value" value="" {% if not browser %}autofocus{% endif %} required>
+                {% endif %}
+
+                {% if curr_mode == 'replay' or curr_mode == 'replay-coll' %}
+                    <div class='input-group-btn'>
+                        <button type="button" class="btn btn-default btn-next"><span class='glyphicon glyphicon-chevron-right'></span></button>
+                    </div>
+                {% endif %}
             </div>
-            {% endif %}
+        </form>
 
-            {% if curr_mode == "record" %}
-            <span class="glyphicon glyphicon-lg glyphicon-dot-sm glyphicon-recording-status Blink" aria-hidden="true"></span>
-            <span class="recorder-status Blink">Recording</span>
-            {% elif curr_mode == "replay" or curr_mode == "replay-coll" %}
-            <span class="glyphicon glyphicon-lg glyphicon-play-circle glyphicon-recording-status" aria-hidden="true"></span>
-            <span class="recorder-status">Replaying</span>
-            {% elif curr_mode == "patch" %}
-            <span class="glyphicon glyphicon-lg glyphicon-import glyphicon-recording-status patching" aria-hidden="true"></span>
-            <span class="recorder-status patching">Patching</span>
-            {% elif curr_mode == "new" %}
-            <span class="glyphicon glyphicon-lg glyphicon-modal-window glyphicon-recording-status top-buffer-sm" aria-hidden="true"></span>
-            <span class="recorder-status">Create New Recording</span>
-            {% endif %}
+    </div>
 
-            {% if curr_mode == 'new' %}
-            <label for="rec-title" class="sr-only">Recording title</label>
-            <input name="rec-title" type="text" class="left-buffer form-control input-sm title-inline" placeholder="Recording title" value="{{ rec_title }}" required>
-            {% else %}
-            <span class="size-counter size-counter-active">
-                <span class="left-buffer badge current-size" data-size="{{ info.size }}"></span>
-            </span>
-            <span class="left-buffer bookmark-count">0 bookmarks</span>
-            <button id="autoscroll" type="button"
-                    class="left-buffer btn btn-default btn-xs" data-toggle="button"
-                    aria-pressed="false" autocomplete="off">Autoscroll</button>
-
-            {% if can_write() %}
-            <button id="snapshot" type="button"
-                    class="left-buffer btn btn-default btn-xs"
-                    autocomplete="off">
-                <span class="glyphicon glyphicon-camera glyphicon-button"></span>Snapshot</button>
-
-            {% if (curr_mode == "replay" or curr_mode == "replay-coll") %}
-            <button type="button" class="left-buffer btn btn-default btn-xs patch-page">
-                Patch
+    <div class="recording-actions text-center col-md-2 col-sm-2">
+        {# needs implementation
+        {% if can_admin() %}
+            <button class="btn btn-default">
+                <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
             </button>
-            {% endif %}
-            {% endif %}
+        {% endif %}
+        #}
 
-            {% endif %}
+        {% if curr_mode != 'new' %}
+            <button class="btn btn-default" title="Doesn't look right?" data-toggle="modal" data-target="#report-modal">
+                <svg height="1792" viewBox="0 0 1792 1792" width="1792" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1696 960q0 26-19 45t-45 19h-224q0 171-67 290l208 209q19 19 19 45t-19 45q-18 19-45 19t-45-19l-198-197q-5 5-15 13t-42 28.5-65 36.5-82 29-97 13v-896h-128v896q-51 0-101.5-13.5t-87-33-66-39-43.5-32.5l-15-14-183 207q-20 21-48 21-24 0-43-16-19-18-20.5-44.5t15.5-46.5l202-227q-58-114-58-274h-224q-26 0-45-19t-19-45 19-45 45-19h224v-294l-173-173q-19-19-19-45t19-45 45-19 45 19l173 173h844l173-173q19-19 45-19t45 19 19 45-19 45l-173 173v294h224q26 0 45 19t19 45zm-480-576h-640q0-133 93.5-226.5t226.5-93.5 226.5 93.5 93.5 226.5z"/>
+                </svg>
+            </button>
+        {% endif %}
 
+        {% if curr_mode != 'new' %}
+            {{ sharing_widget(get_share_url(), get_embed_url(), coll_title, can_admin(), is_public(user, coll)) }}
+        {% endif %}
 
-            {% if browser %}
-            <button type="button" data-toggle="modal" data-target="#clipboard-modal" class="left-buffer btn btn-xs btn-default">
-            <span class="glyphicon glyphicon-copy glyphicon-button"></span>Clipboard</button>
+        {% if can_admin() %}
+            <form class="{{ 'content-action' if curr_mode != 'new' else 'start-recording' }}">
+                <button type="submit" class="btn btn-default">
+                    {{ 'Finish' if curr_mode != 'new' else 'Start' }}
+                </button>
+            </form>
+        {% endif %}
+    </div>
 
-            <span id="browser-countdown-label">Browser Time Left: <span id="browser-countdown"></span></span>
-            {% endif %}
-
-            {#
-            <!-- Disabled for now -->
-            <button id="load-all" type="button"
-                    class="left-buffer btn btn-default btn-xs">
-                <span class="glyphicon glyphicon-th glyphicon-button"></span>Load All</button>
-            #}
-
-        </div>
-
-        <div class="input-group containerized">
-            {% include '/containerized_browser_select.html' %}
-            <input type="text" class="url-input-recorder form-control" name="url" data-value-encoded="{{ url }}" data-target-decoded="value" value="" {% if not browser %}autofocus{% endif %} required>
-            <input class="hidden" type="submit">
-            <span id="replay-date" class="replay-date"></span>
-        </div>
-    </form>
-
-</div>
-
-<div class="recording-actions text-center col-md-2 col-sm-2 top-buffer">
-    {% set share_url = get_share_url() %}
-    {% set embed_url = get_embed_url() %}
-    {{ sharing_widget(share_url, embed_url, coll_title, can_admin(), is_public(user, coll)) }}
-    <form class="{{ 'content-action' if curr_mode != 'new' else 'start-recording' }}">
-        <button type="submit" class="btn btn-default">
-            {{ 'Finish' if curr_mode != 'new' else 'Start' }}
-        </button>
-    </form>
-</div>
-
-{% if can_write() %}
-{% include 'snapshot_modal.html' %}
-{% endif %}
+    {% if can_write() %}
+    {% include 'snapshot_modal.html' %}
+    {% endif %}
 
 {% endif %}
 
