--- a/webrecorder/webrecorder/templates/utils.html
+++ b/webrecorder/webrecorder/templates/utils.html
@@ -6,22 +6,89 @@
 {% macro sharing_widget(url, embed_url, coll, owner=False, is_public=none) %}
     {% set safe_url = url|urlencode %}
     <div id="fb-root"></div>
+    {# load fb and tw apis #}
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=190097681462944";
+      js.src = "//connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
     </script>
-    <div class='share-container pull-right'
-        {% if is_public %}data-public='true'
-        {% elif is_public is not none %}data-public='false'{% endif %}>
+    <script>
+      window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+
+      return t;
+    }(document, "script", "twitter-wjs"));</script>
+    </script>
+    <div id='share-widget' class='share-container pull-right'
+         data-url="{{ url }}"
+         {% if is_public %}data-public='true'
+         {% elif is_public is not none %}data-public='false'{% endif %}>
         <button type='button'
                 class='btn btn-default dropdown-toggle sharing-widget'
                 data-toggle="dropdown"
                 aria-label='Sharing widget'>
-                    <span class='glyphicon glyphicon-share'></span>
+                    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg2" viewBox="0 0 48 48.000001" height="48" width="48">
+                      <g
+                         transform="translate(0,-1004.3622)"
+                         id="layer1">
+                        <g
+                           transform="translate(0,1.5000174)"
+                           id="g4280">
+                          <circle
+                             style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+                             id="path4266"
+                             cx="11"
+                             cy="1026.8622"
+                             r="6" />
+                          <circle
+                             r="6"
+                             cy="1015.3622"
+                             cx="35"
+                             id="circle4268"
+                             style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                          <circle
+                             style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+                             id="circle4270"
+                             cx="35"
+                             cy="1038.3622"
+                             r="6" />
+                          <rect
+                             style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"
+                             id="rect4274"
+                             width="31"
+                             height="3"
+                             x="-458.04065"
+                             y="919.03638"
+                             rx="0"
+                             ry="0"
+                             transform="matrix(0.89098772,-0.45402741,0.45402741,0.89098772,0,0)" />
+                          <rect
+                             transform="matrix(0.89098772,0.45402741,0.45402741,-0.89098772,0,0)"
+                             ry="0"
+                             rx="0"
+                             y="-910.87903"
+                             x="474.26474"
+                             height="3"
+                             width="31"
+                             id="rect4278"
+                             style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        </g>
+                      </g>
+                    </svg>
         </button>
         <div class='dropdown-menu share-modal arrow_box'>
             <span class='glyphicon glyphicon-remove-circle'></span>
@@ -39,14 +106,9 @@
             <div class='shareables'>
                 <div class='platforms clearfix'>
                     <!-- twitter -->
-                    <iframe
-                      src="https://platform.twitter.com/widgets/tweet_button.html?size=l&url={{ safe_url }}&via=webrecorder_io"
-                      title="Twitter Tweet Button"
-                      style="border: 0; overflow: hidden; width: 76px; height: 37px; float: left;">
-                    </iframe>
-
+                    <div id='wr-tw'></div>
                     <!-- facebook -->
-                    <div class="fb-share-button" data-href="{{ url }}" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ safe_url }}">Share</a></div>
+                    <div id='wr-fb'></div>
                 </div>
 
                 <label for='shareable-url'>Copy and paste to share:</label>
