Add some basic dimensions to sharing embed

--- a/webrecorder/webrecorder/templates/utils.html
+++ b/webrecorder/webrecorder/templates/utils.html
@@ -115,7 +115,7 @@
                 <input type='text' id='shareable-url' value='{{ url }}' />
 
                 <label for='shareable-embed-code'>Embed code:</label>
-                <textarea id='shareable-embed-code'><iframe  src="{{ embed_url }}" onload="" seamless="seamless" frameborder="0" scrolling="yes" class="pager_iframe"></iframe></textarea>
+                <textarea id='shareable-embed-code'><iframe  src="{{ embed_url }}" onload="" width='640' height='480' seamless="seamless" frameborder="0" scrolling="yes" class="pager_iframe"></iframe></textarea>
             </div>
         </div>
     </div>
