--- a/webrecorder/webrecorder/templates/mode_dropdown.html
+++ b/webrecorder/webrecorder/templates/mode_dropdown.html
@@ -1,5 +1,5 @@
 
-{% set is_recording = (curr_mode == 'record' or curr_mode == 'new') %}
+{% set is_recording = (curr_mode == 'record') %}
 {% set is_replay = (curr_mode == 'replay' or curr_mode == 'replay-coll') %}
 {% set is_patch = curr_mode == 'patch' %}
 
@@ -10,7 +10,7 @@
             <span class='btn-content'>Replaying</span>
         {% elif is_recording %}
             <span class="glyphicon glyphicon-dot-sm glyphicon-recording-status{% if curr_mode == 'record' %} Blink{% endif %}" aria-hidden="true"></span>
-            <span class='btn-content'>{% if curr_mode == 'new' %}New {% endif %}Recording</span>
+            <span class='btn-content'>Recording</span>
         {% elif is_patch %}
             <svg class='Blink' xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg2" viewBox="0 0 48 48.000001" height="48" width="48">
               <g transform="translate(0,-1004.3622)" id="layer1">
@@ -33,53 +33,48 @@
     </button>
     <div class="dropdown-menu">
         <div class="wr-modes">
-            {% if not curr_mode == 'new' %}
-                <ul class="row wr-mode{% if is_replay %} active{% endif %}" data-mode="replay">
-                    <li class='col-xs-3'>
-                        <span class="glyphicon glyphicon-play-circle wr-mode-icon" aria-hidden="true"></span>
-                    </li>
-                    <li class="col-xs-9">
-                        {% if is_replay %}
-                            <h5>Currently Replaying</h5>
-                            <p>You are looking at an archived version of the web</p>
-                        {% else %}
-                            <h5>Switch to Replay</h5>
-                            <p>Access the archived version of this URL</p>
-                        {% endif %}
-                    </li>
-                </ul>
-
-                {% if not is_recording %}
-                <ul class="row wr-mode{% if is_patch %} active{% endif %}" data-mode='patch'>
-                    <li class='col-xs-3'>
-                        <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg2" viewBox="0 0 48 48.000001" height="48" width="48">
-                          <g transform="translate(0,-1004.3622)" id="layer1">
-                            <path id="rect4140" d="m 38.024745,1008.4458 c -2.285133,-2.2851 -6.017461,-2.233 -8.367891,0.1174 l -25.4558439,25.4559 c -2.35043,2.3504 -2.402524,6.0827 -0.117391,8.3678 l 5.8916363,5.8917 c 2.2851326,2.2851 6.0174606,2.233 8.3678906,-0.1174 l 25.455844,-25.4559 c 2.35043,-2.3504 2.402524,-6.0827 0.117391,-8.3678 l -5.891636,-5.8917 z m -0.825879,2.0026 4.714966,4.7149 c 1.828107,1.8281 1.564845,5.0339 -0.589716,7.1885 l -23.334524,23.3345 c -2.15456,2.1546 -5.360351,2.4178 -7.188458,0.5897 l -4.7149659,-4.7149 c -1.8281072,-1.8281 -1.564845,-5.0339 0.5897158,-7.1885 l 23.3345241,-23.3345 c 2.15456,-2.1546 5.360351,-2.4178 7.188458,-0.5897 z" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <path id="path4169" transform="translate(0,1004.3622)" d="M 14.134766 2.4042969 C 12.622238 2.3831094 11.117176 2.9414344 9.9746094 4.0839844 L 4.0839844 9.9746094 C 1.7988514 12.259709 1.8507423 15.99335 4.2011719 18.34375 L 8.9296875 23.070312 L 10.34375 21.65625 L 6.6757812 17.990234 C 4.5212205 15.835634 4.2578303 12.628881 6.0859375 10.800781 L 10.800781 6.0859375 C 12.628888 4.2578375 15.835674 4.5211813 17.990234 6.6757812 L 21.65625 10.34375 L 23.070312 8.9296875 L 18.34375 4.2011719 C 17.168535 3.0259719 15.647293 2.4254844 14.134766 2.4042969 z M 39.070312 24.929688 L 37.65625 26.34375 L 41.324219 30.009766 C 43.47878 32.164366 43.742169 35.371119 41.914062 37.199219 L 37.199219 41.914062 C 35.371112 43.742162 32.164326 43.478819 30.009766 41.324219 L 26.34375 37.65625 L 24.929688 39.070312 L 29.65625 43.798828 C 32.00668 46.149228 35.740258 46.201116 38.025391 43.916016 L 43.916016 38.025391 C 46.201149 35.740291 46.149258 32.00665 43.798828 29.65625 L 39.070312 24.929688 z " style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <circle r="1.5" cy="1027.8622" cx="18.5" id="path4174" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4176" cx="21.5" cy="1024.8622" r="1.5" />
-                            <circle r="1.5" cy="1021.8622" cx="24.5" id="circle4178" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4180" cx="21.5" cy="1030.8622" r="1.5" />
-                            <circle r="1.5" cy="1027.8622" cx="24.5" id="circle4182" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4184" cx="27.5" cy="1024.8622" r="1.5" />
-                            <circle r="1.5" cy="1033.8622" cx="24.5" id="circle4186" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                            <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4188" cx="27.5" cy="1030.8622" r="1.5" />
-                            <circle r="1.5" cy="1027.8622" cx="30.5" id="circle4190" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
-                          </g>
-                        </svg>
-                    </li>
-                    <li class='col-xs-9'>
-                        {% if is_patch %}
-                            <h5>Currently Patching</h5>
-                            <p>You are recording items missing in the current collection</p>
-                        {% else %}
-                            <h5>Switch to Patching</h5>
-                            <p>Record items that are missing from the current collection</p>
-                        {% endif %}
-                    </li>
-                </ul>
-                {% endif %}
-            {% endif %}
+            <ul class="row wr-mode{% if is_replay %} active{% endif %}" data-mode="replay">
+                <li class='col-xs-3'>
+                    <span class="glyphicon glyphicon-play-circle wr-mode-icon" aria-hidden="true"></span>
+                </li>
+                <li class="col-xs-9">
+                    {% if is_replay %}
+                        <h5>Currently Replaying</h5>
+                        <p>You are looking at an archived version of the web</p>
+                    {% else %}
+                        <h5>Switch to Replay</h5>
+                        <p>Access the archived version of this URL</p>
+                    {% endif %}
+                </li>
+            </ul>
+            <ul class="row wr-mode{% if is_recording %} disabled{% elif is_patch %} active{% endif %}" data-mode='patch'>
+                <li class='col-xs-3'>
+                    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" id="svg2" viewBox="0 0 48 48.000001" height="48" width="48">
+                      <g transform="translate(0,-1004.3622)" id="layer1">
+                        <path id="rect4140" d="m 38.024745,1008.4458 c -2.285133,-2.2851 -6.017461,-2.233 -8.367891,0.1174 l -25.4558439,25.4559 c -2.35043,2.3504 -2.402524,6.0827 -0.117391,8.3678 l 5.8916363,5.8917 c 2.2851326,2.2851 6.0174606,2.233 8.3678906,-0.1174 l 25.455844,-25.4559 c 2.35043,-2.3504 2.402524,-6.0827 0.117391,-8.3678 l -5.891636,-5.8917 z m -0.825879,2.0026 4.714966,4.7149 c 1.828107,1.8281 1.564845,5.0339 -0.589716,7.1885 l -23.334524,23.3345 c -2.15456,2.1546 -5.360351,2.4178 -7.188458,0.5897 l -4.7149659,-4.7149 c -1.8281072,-1.8281 -1.564845,-5.0339 0.5897158,-7.1885 l 23.3345241,-23.3345 c 2.15456,-2.1546 5.360351,-2.4178 7.188458,-0.5897 z" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <path id="path4169" transform="translate(0,1004.3622)" d="M 14.134766 2.4042969 C 12.622238 2.3831094 11.117176 2.9414344 9.9746094 4.0839844 L 4.0839844 9.9746094 C 1.7988514 12.259709 1.8507423 15.99335 4.2011719 18.34375 L 8.9296875 23.070312 L 10.34375 21.65625 L 6.6757812 17.990234 C 4.5212205 15.835634 4.2578303 12.628881 6.0859375 10.800781 L 10.800781 6.0859375 C 12.628888 4.2578375 15.835674 4.5211813 17.990234 6.6757812 L 21.65625 10.34375 L 23.070312 8.9296875 L 18.34375 4.2011719 C 17.168535 3.0259719 15.647293 2.4254844 14.134766 2.4042969 z M 39.070312 24.929688 L 37.65625 26.34375 L 41.324219 30.009766 C 43.47878 32.164366 43.742169 35.371119 41.914062 37.199219 L 37.199219 41.914062 C 35.371112 43.742162 32.164326 43.478819 30.009766 41.324219 L 26.34375 37.65625 L 24.929688 39.070312 L 29.65625 43.798828 C 32.00668 46.149228 35.740258 46.201116 38.025391 43.916016 L 43.916016 38.025391 C 46.201149 35.740291 46.149258 32.00665 43.798828 29.65625 L 39.070312 24.929688 z " style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <circle r="1.5" cy="1027.8622" cx="18.5" id="path4174" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4176" cx="21.5" cy="1024.8622" r="1.5" />
+                        <circle r="1.5" cy="1021.8622" cx="24.5" id="circle4178" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4180" cx="21.5" cy="1030.8622" r="1.5" />
+                        <circle r="1.5" cy="1027.8622" cx="24.5" id="circle4182" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4184" cx="27.5" cy="1024.8622" r="1.5" />
+                        <circle r="1.5" cy="1033.8622" cx="24.5" id="circle4186" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                        <circle style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" id="circle4188" cx="27.5" cy="1030.8622" r="1.5" />
+                        <circle r="1.5" cy="1027.8622" cx="30.5" id="circle4190" style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:4;stroke-linecap:butt;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1" />
+                      </g>
+                    </svg>
+                </li>
+                <li class='col-xs-9'>
+                    {% if is_patch %}
+                        <h5>Currently Patching</h5>
+                        <p>You are recording items missing in the current collection</p>
+                    {% else %}
+                        <h5>Switch to Patching</h5>
+                        <p>Record items that are missing from the current collection</p>
+                    {% endif %}
+                </li>
+            </ul>
 
             <ul class="row wr-mode{% if is_recording %} active{% endif %}" data-mode="record">
                 <li class='col-xs-3'>
@@ -95,17 +90,6 @@
                     {% endif %}
                 </li>
             </ul>
-            {% if is_replay %}
-                <ul class="row wr-mode{% if is_recording %} active{% endif %}" data-mode="new">
-                    <li class='col-xs-3'>
-                        <span class="glyphicon glyphicon-plus wr-mode-icon" aria-hidden="true"></span>
-                    </li>
-                    <li class='col-xs-9'>
-                        <h5>New Blank Recording</h5>
-                        <p>Start a new recording session</p>
-                    </li>
-                </ul>
-            {% endif %}
             <div class='divider' role='separator'></div>
             <ul class='row wr-mode' data-mode="snapshot">
                 <li class='col-xs-3'>
