--- a/webrecorder/webrecorder/templates/utils.html
+++ b/webrecorder/webrecorder/templates/utils.html
@@ -3,7 +3,7 @@
     Sharing widget
     - if public status is unknown (None), request from the api.
 #}
-{% macro sharing_widget(url, embed_url, coll, owner=False, is_public=none) %}
+{% macro sharing_widget(url, embed_url, coll, owner=False, is_public=none, anon=False) %}
     {% set safe_url = url|urlencode %}
     <div id="fb-root"></div>
     {# load fb and tw apis #}
@@ -94,12 +94,18 @@
             <span class='glyphicon glyphicon-remove-circle'></span>
             {% if owner %}
                 <div class='public-switch clearfix {% if is_public %}hidden{% endif %}'>
-                    <p class='make-public-desc'>
-                        Collection <strong>{{ coll }}</strong> is set to private. To get a share link, make the collection public:
-                    </p>
-                    <div class="access-switch" style="float:right;">
-                        {% include 'public_private_switch.html' %}
-                    </div>
+                    {% if anon %}
+                      <p class='make-public-desc'>
+                        This collection is a temporary collection. To preserve and share, <a href="/_register" target="_parent">Sign Up</a> or <a class="login-link" href="/_login_modal">Login</a>.
+                      </p>
+                    {% else %}
+                      <p class='make-public-desc'>
+                          Collection <strong>{{ coll }}</strong> is set to private. To get a share link, make the collection public:
+                      </p>
+                      <div class="access-switch" style="float:right;">
+                          {% include 'public_private_switch.html' %}
+                      </div>
+                    {% endif %}
                 </div>
             {% endif %}
 
