--- a/webrecorder/webrecorder/templates/browser_embed.html
+++ b/webrecorder/webrecorder/templates/browser_embed.html
@@ -2,12 +2,12 @@
 {% block head %}
 <meta property="og:url" content="{{ get_share_url() }}" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Archived page from the \"{{ coll_title }}\" Collection on {{ get_app_host()|default('webrecorder.io', true) }}" />
+<meta property="og:title" content="Archived page from the '{{ coll_title }}' Collection on {{ get_app_host()|default('webrecorder.io', true) }}" />
 <meta name='og:description' content="{{ info.coll_desc }}">
 
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@webrecorder_io" />
-<meta name="twitter:title" content="Archived page from the \"{{ coll_title }}\" Collection on {{ get_app_host()|default('webrecorder.io', true) }}" />
+<meta name="twitter:title" content="Archived page from the '{{ coll_title }}' Collection on {{ get_app_host()|default('webrecorder.io', true) }}" />
 <meta name="twitter:description" content="{{ info.coll_desc }}" />
 
 {{ super() }}
