--- a/webrecorder/webrecorder/templates/mode_dropdown.html
+++ b/webrecorder/webrecorder/templates/mode_dropdown.html
@@ -85,7 +85,7 @@
                         <h5>Currently Recording</h5>
                         <p>You are creating an archive of the live web right now</p>
                     {% else %}
-                        <h5>Switch to Recording</h5>
+                        <h5>Switch to Record Again</h5>
                         <p>Start a new recording session at the current URL</p>
                     {% endif %}
                 </li>
