--- a/webrecorder/webrecorder/templates/header.html
+++ b/webrecorder/webrecorder/templates/header.html
@@ -27,5 +27,8 @@
             {% include 'recorder.html' %}
         </div>
 
+        <div class='container-fluid wr-tools'>
+            <button id="autoscroll" type="button" class="left-buffer btn btn-default btn-xs" data-toggle="button" aria-pressed="false" autocomplete="off">Autoscroll</button>
+        </div>
     </div>
 </header>
