Add feedback form

--- a/webrecorder/webrecorder/templates/user_management_links.html
+++ b/webrecorder/webrecorder/templates/user_management_links.html
@@ -24,6 +24,12 @@
                 </a>
             </li>
         {% endif %}
+
+        <li class="navbar-text navbar-right">
+            <a target="_blank" href="https://docs.google.com/a/rhizome.org/forms/d/e/1FAIpQLScjBnDSN1kMcuH3ic2GJBHKNLfrHgjlxR80mBJJsGIj2225bg/viewform">
+                <span class="glyphicon glyphicon-file"></span> User feedback form
+            </a>
+        </li>
     </ul>
 {% else %}
     <ul class="nav">
